# python-project-template

./: .env.default  .envrc  Makefile  README.md  prospector.yaml  pyproject.toml  tox.ini
docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
src/py_mqtt/: __init__.py
src/template/: __init__.py
tests/unittest/: test_check.py
